[gd_scene load_steps=7 format=3 uid="uid://pi6yrfgku4qm"]

[ext_resource type="Script" path="res://scripts/metrorito_manager.gd" id="1_x6phl"]
[ext_resource type="Texture2D" uid="uid://djdtycuhu0sj5" path="res://images/espacio.jpg" id="2_bwkkh"]
[ext_resource type="Texture2D" uid="uid://dhab6hmj1xxib" path="res://images/o_rojo.png" id="3_ihc0t"]
[ext_resource type="Texture2D" uid="uid://bcxveakr7it40" path="res://images/o_verde.png" id="4_t3har"]
[ext_resource type="AudioStream" uid="uid://b1xnrmcetxmx7" path="res://sounds/space.mp3" id="5_g0pjt"]

[sub_resource type="CircleShape2D" id="CircleShape2D_k02qi"]
radius = 62.514

[node name="naves" type="Node2D"]

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(957.5, 540.5)
scale = Vector2(1.01094, 0.855468)
texture = ExtResource("2_bwkkh")

[node name="meteorito_manager" type="Node2D" parent="."]
script = ExtResource("1_x6phl")

[node name="o_rojo" type="CharacterBody2D" parent="." groups=["rojo"]]
position = Vector2(368, 939)

[node name="o_rojo" type="CollisionShape2D" parent="o_rojo"]
position = Vector2(10, -28)
shape = SubResource("CircleShape2D_k02qi")

[node name="Sprite2D" type="Sprite2D" parent="o_rojo/o_rojo"]
position = Vector2(2, 34)
scale = Vector2(0.424779, 0.434783)
texture = ExtResource("3_ihc0t")

[node name="o_verde" type="CharacterBody2D" parent="." groups=["verde"]]
position = Vector2(961, 940)

[node name="o_verde" type="CollisionShape2D" parent="o_verde"]
position = Vector2(10, -28)
shape = SubResource("CircleShape2D_k02qi")

[node name="Sprite2D" type="Sprite2D" parent="o_verde/o_verde"]
position = Vector2(3, -15)
scale = Vector2(0.424779, 0.434783)
texture = ExtResource("4_t3har")

[node name="fondo" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_g0pjt")
volume_db = -15.0
autoplay = true
bus = &"Music"

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="timeout" from="Timer" to="meteorito_manager" method="_on_timer_timeout"]
